# minidist-rs

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
docs/: architecture.md  data_validation.md  minisql.md  perf_notes.md  storage_format.md  unspec_behavior.md
examples/: sales.csv  sales.ssf  sales_q.sql  sales_q_res.txt  variety.ssf
scripts/: gen-fake-csv.py  read-col-bin.py
src/: coordinator_cluster.rs  coordinator_merge.rs  coordinator_query.rs  coordinator_route.rs  coordinator_server.rs  lib.rs  minisql_eval.rs  minisql_parse.rs  minisql_print.rs  rpc.rs  storage_inspect.rs  storage_load.rs  worker_exec.rs  worker_server.rs
src/coordinator/: coordinator_cluster.rs  coordinator_merge.rs  coordinator_route.rs  coordinator_server.rs  mod.rs
src/minisql/: minisql_eval.rs  minisql_parse.rs  minisql_print.rs  mod.rs
src/minisql/grammar/: minisql.pest
src/storage/: mod.rs  storage_init.rs  storage_inspect.rs  storage_load.rs  storage_schema.rs
src/worker/: mod.rs  worker_exec.rs  worker_server.rs
tests/: minisql_parse_tests.rs  query_eval_tests.rs  storage_tests.rs
