[package]
name = "minidist-rs"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
pest = { version = "2.7" }
pest_derive = "2.7"
rmp = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
