[package]
name = "minidist-rs"
version = "0.1.0"
edition = "2024"
description = "Simple distributed SQL query engine"
repository = "https://github.com/konfou/minidist-rs"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
pest = { version = "2.8" }
pest_derive = "2.8"
rmp = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }

[dev-dependencies]
cargo-makegen = "0.1"

[package.metadata.dist]
archive_name = "Foutzopoulos_Konstantinos_Project.zip"
